# backpy

./: .gitignore  README.md  backpy.py  backpy_with_args.py  pyproject.toml  requirements-dev.txt  requirements.txt  teste.py
.github/workflows/: linter.yml
backpy/: backpy.py  backpy_with_args.py  exclude_list.txt
contrib/: env-sample
tests/: test_backpy.py  test_backpy_with_args.py
