[tool.poetry]
name = "backpy"
version = "0.1.0"
description = ""
authors = ["Isaac Ferreira Filho"]

[tool.poetry.dependencies]
python = "^3.8"
pytest = "^5.4.1"
flake8 = "^3.7.9"
black = "^19.10b0"
python-decouple = "^3.3"

[tool.poetry.dev-dependencies]
autopep8 = "^1.5.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
